# Ford-api

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
infra/nginx/: Dockerfile  nginx.conf
infra/postgres/: init.sql
scripts/: ranger-raptor.json
services/audit-service/: Dockerfile  entrypoint.sh  pyproject.toml
services/audit-service/migrations/: env.py
services/audit-service/migrations/versions/: 0001_initial.py
services/audit-service/src/audit_service/: __init__.py  config.py  dependencies.py  main.py
services/audit-service/src/audit_service/controllers/: __init__.py  audit_controller.py
services/audit-service/src/audit_service/events/: __init__.py  consumers.py
services/audit-service/src/audit_service/models/: __init__.py  event.py
services/audit-service/src/audit_service/repositories/: __init__.py  event_repository.py
services/audit-service/src/audit_service/schemas/: __init__.py  event.py
services/audit-service/src/audit_service/services/: __init__.py  audit_service.py
services/auth-service/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
services/auth-service/migrations/: env.py
services/auth-service/migrations/versions/: 0001_initial.py
services/auth-service/src/auth_service/: __init__.py  config.py  dependencies.py  main.py
services/auth-service/src/auth_service/controllers/: __init__.py  auth_controller.py
services/auth-service/src/auth_service/models/: __init__.py  refresh_token.py  user.py
services/auth-service/src/auth_service/repositories/: __init__.py  refresh_token_repository.py  user_repository.py
services/auth-service/src/auth_service/schemas/: __init__.py  auth.py
services/auth-service/src/auth_service/services/: __init__.py  auth_service.py
services/auth-service/tests/: test_register_schema.py
services/user-service/: Dockerfile  entrypoint.sh  pyproject.toml
services/user-service/migrations/: env.py
services/user-service/migrations/versions/: 0001_initial.py
services/user-service/src/user_service/: __init__.py  config.py  dependencies.py  main.py
services/user-service/src/user_service/controllers/: __init__.py  profile_controller.py
services/user-service/src/user_service/events/: __init__.py  consumers.py
services/user-service/src/user_service/models/: __init__.py  profile.py
services/user-service/src/user_service/repositories/: __init__.py  profile_repository.py
services/user-service/src/user_service/schemas/: __init__.py  profile.py
services/user-service/src/user_service/services/: __init__.py  profile_service.py
services/vehicle-service/: Dockerfile  entrypoint.sh  pyproject.toml
services/vehicle-service/migrations/: env.py
services/vehicle-service/migrations/versions/: 0001_initial.py
services/vehicle-service/src/vehicle_service/: __init__.py  config.py  dependencies.py  main.py
services/vehicle-service/src/vehicle_service/controllers/: __init__.py  vehicle_controller.py
services/vehicle-service/src/vehicle_service/models/: __init__.py  query.py  spec.py
services/vehicle-service/src/vehicle_service/repositories/: __init__.py  query_repository.py
services/vehicle-service/src/vehicle_service/schemas/: __init__.py  query.py
services/vehicle-service/src/vehicle_service/services/: __init__.py  claude_client.py  specs_normalizer.py  vehicle_service.py
services/vehicle-service/tests/: test_query_schema.py  test_specs_normalizer.py
