[project]
name = "ford-api"
version = "0.1.0"
description = "Ford Challenge — SOA + Cybersecurity backend"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.uv.workspace]
members = ["packages/*", "services/*"]

[tool.uv.sources]
ford-shared = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "N"]
ignore = ["S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages", "services"]
