[project]
name = "user-service"
version = "0.1.0"
description = "User profile service — consumes user.registered events"
requires-python = ">=3.12"
dependencies = [
    "ford-shared",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "aio-pika>=9.4",
    "python-jose[cryptography]>=3.3",
    "structlog>=24.1",
    "email-validator>=2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/user_service"]
