[project]
name = "vehicle-service"
version = "0.1.0"
description = "Vehicle specifications service — queries Claude and normalizes output"
requires-python = ">=3.12"
dependencies = [
    "ford-shared",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-jose[cryptography]>=3.3",
    "aio-pika>=9.4",
    "slowapi>=0.1.9",
    "redis>=5.0",
    "anthropic>=0.34",
    "tenacity>=8.4",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vehicle_service"]
